Add info to package.json

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Iliyan Videv",
   "license": "ISC",
-  "description": "",
+  "description": "The flag guessing game's backend",
   "dependencies": {
     "express": "^5.1.0"
   }
