Setup compression and caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -22,12 +22,23 @@ http {
 
     keepalive_timeout 65;
 
+    gzip on;
+    gzip_types text/plain application/json;
+
+    server_tokens off;
+
+    proxy_cache_path /var/cache/nginx/flags 
+                     use_temp_path=off 
+                     levels=1:2 
+                     keys_zone=flags:10m 
+                     inactive=43200m; # 1 month inactive cache expiry
+
     server {
         server_name localhost;
         listen 80;
 
         location ~* ^/api(.*)$ {
-            return 301 https://$server_name$request_uri;
+            return 301 https://$server_name$request_uri$query_string;
         }
     }
 
@@ -39,11 +50,9 @@ http {
 
         location ~* ^/api(.*)$ {
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_pass http://127.0.0.1:3000$1;
+            proxy_cache flags;
+            add_header X-Cache-Status $upstream_cache_status;
+            proxy_pass http://127.0.0.1:3000$1?$query_string;
         }
     }
 }
