Change nginx log paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log notice;
+error_log  /var/log/nginx/error/error.log error;
 pid        /run/nginx.pid;
 
 
@@ -18,7 +18,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /var/log/nginx/access/access.log  main;
 
     keepalive_timeout 65;
 
@@ -31,7 +31,7 @@ http {
                      use_temp_path=off 
                      levels=1:2 
                      keys_zone=flags:10m 
-                     inactive=43200m; # 1 month inactive cache expiry
+                     inactive=2592000s; # 1 month inactive cache expiry
 
     server {
         server_name localhost;
